fix(issue-5): stop page from reloading when generating transcript - added current_time param to /video url

--- a/front-end/templates/video.html
+++ b/front-end/templates/video.html
@@ -27,15 +27,24 @@
     <div class="grid grid-cols-1 gap-4 md:grid-cols-5">
         <div class="rounded md:col-span-2">
             <video controls id="Video" class="rounded-md">
+
                 <!-- todo: change src to accept the video path from session data -->
                 <source src="../static/media/oop.mp4" type="video/mp4">
             </video>
+            <script>
+                function SetCurrentTime() {
+                    let player = document.getElementById("Video")
+                    player.currentTime = parseInt(document.getElementById('Video_pos').value)
+                }
+                window.onload = SetCurrentTime;
+            </script>
         </div>
 
         <div class="rounded p-6 ">
             <form action="/generate-transcript" class="flex flex-col"
                   method="POST">
-                <button type="submit"
+                <button id="submit_button"
+                        type="submit"
                         class="bg-white p-6 lg:p-10 rounded-lg
                         focus:bg-zinc-400 hover:bg-gray-400
                         ease-in-out transition-colors duration-250
@@ -44,7 +53,8 @@
                     generate transcript
                 </button>
 
-                <input type="hidden" name="video_pos" id="Video_pos" value="0">
+
+                <input type="hidden" name="video_pos" id="Video_pos" value="{{current_time}}">
 
                 <script>
                     video = document.getElementById('Video');
